# web-conexs-app

./: README.md  docker-compose.yaml
.github/workflows/: ci-backend.yml  ci-frontend.yml  publish-containers.yml  publish-helm.yml
Charts/web-conexs/: Chart.yaml  tables.sql  values.yaml
Charts/web-conexs/templates/: _helpers.tpl  api_deployment.yaml  api_service.yaml  client_deployment.yaml  client_service.yaml  data_pvc.yaml  data_pvc_cleanup_job.yaml  dbenv_configmap.yaml  dbtables_configmap.yaml  submitter_deployment.yaml
database/: tables.sql
helm/web-conexs/templates/: api_service.yaml  client_deployment.yaml  data_pvc.yaml
web-conexs-api/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
web-conexs-api/.devcontainer/: devcontainer.json
web-conexs-api/src/: submitter.py  test_new_schema.py
web-conexs-api/src/data_clean_up/: __main__.py  clean_up_storage.py  crud.py
web-conexs-api/src/slurm_submission_service/: __main__.py  crud.py  extract_energies.py  extract_populations.py  extract_transitions.py  fdmnes.py  filetransfer.py  orca.py  qe.py  slurm_submit.py  submitter.py
web-conexs-api/src/web_conexs_api/: __main__.py  app.py  auth.py  authz.py  crud.py  database.py  jobfilebuilders.py  periodictable.py  utils.py
web-conexs-api/src/web_conexs_api/models/: models.py
web-conexs-api/src/web_conexs_api/routers/: archive.py  cluster.py  crystals.py  fdmnes.py  matproject.py  molecules.py  orca.py  qe.py  simulations.py  structures.py  user.py
web-conexs-api/tests/: test_cif_to_structure.py  test_clean_up.py  test_filetransfer.py  test_jobfile_builder.py  test_simulation_route.py  test_slurm_submit.py  utils.py
web-conexs-client/: .gitignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web-conexs-client/.devcontainer/: devcontainer.json
web-conexs-client/nginx/: default.conf
web-conexs-client/src/: App.tsx  UserContext.tsx  defaultstructures.ts  index.css  main.tsx  models.ts  periodictable.ts  queryfunctions.ts  utils.test.ts  utils.ts
web-conexs-client/src/components/: AboutPage.tsx  ClusterBadge.test.tsx  ClusterBadge.tsx  ConvertFromCif.tsx  CreateCrystalPage.tsx  CreateMoleculePage.tsx  CrystalPage.tsx  CrystalViewer.tsx  FdmnesChart.tsx  FdmnesCrystalViewer.tsx  FdmnesForm.tsx  FdmnesLogViewer.tsx  FdmnesModelCard.tsx  FdmnesResults.tsx  FdmnesResultsTabs.tsx  Forbidden.tsx  Header.test.tsx  Header.tsx  LatticeEditor.tsx  LoginPage.tsx  MainPanel.tsx  MoleculePage.tsx  MoleculeTable.tsx  MoleculeViewer.tsx  MolstarCrystalViewer.tsx  MolstarMoleculeViewer.tsx  MolstarOrbitalViewer.tsx  NavButton.tsx  NoStructures.tsx  OrcaChart.tsx  OrcaForm.tsx  OrcaLogViewer.tsx  OrcaModelCard.tsx  OrcaMoleculeViewer.tsx  OrcaResults.tsx  OrcaResultsTabs.tsx  OrcaSubmitPage.tsx  OrcaXYZViewer.tsx  React3dMol.tsx  React3dMolOrbital.tsx  (+19 more)
web-conexs-client/src/components/crystals/: CreateCrystalPage.tsx  CrystalEditor.tsx  CrystalPage.tsx  CrystalViewer.tsx  LatticeEditor.tsx  MatProjCrystalViewer.tsx  (+5 more)
web-conexs-client/src/hooks/: useCRUD.ts  useCrystalAPI.ts  useFdmnesAPI.ts  useFdmnesSchema.ts  useMoleculeAPI.ts  useOrcaSchema.ts  useQESchema.ts  useSimulationAPI.ts
web-conexs-client/src/mocks/: cube.ts  handlers.ts
web-conexs-client/tests/: setup.ts
(+59 files in other folders)
